Web Inspector: Dark Mode: ThreadTreeElement status icon is hard to see when hovered https://bugs.webkit.org/show_bug.cgi?id=192097 <rdar://problem/46318421>
Reviewed by Matt Baker.

* UserInterface/Views/ThreadTreeElement.css:
(.tree-outline > .item.thread .status-button.resume):
(.tree-outline > .item.thread .status-button.resume:active):


Canonical link: https://commits.webkit.org/207472@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239430 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/ThreadTreeElement.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ThreadTreeElement.css
@@ -33,13 +33,13 @@
     width: 11px;
     height: 11px;
     vertical-align: middle;
-    fill: hsla(0, 0%, 0%, 0.5);
+    fill: hsla(0, 0%, var(--foreground-lightness), 0.5);
     stroke: none;
     display: none;
 }
 
 .tree-outline > .item.thread .status-button.resume:active {
-    fill: hsla(0, 0%, 0%, 0.7);
+    fill: hsla(0, 0%, var(--foreground-lightness), 0.7);
 }
 
 .tree-outline:focus > .item.thread.selected .status-button.resume {
